<resources>
    <string name="app_name">Funica</string>
    <string name="return_button_icon">Return button Icon</string>
    <string name="illustration_of_woman_sitting">Illustration of woman sitting</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="google_icon">Google Icon</string>
    <string name="apple_logo_icon">Apple Logo Icon</string>
    <string name="or">or</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="funica_logo">Funica Logo</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="email_icon">Email Icon</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>